Opened 2 years ago

Closed 2 years ago

#18252 closed bug (fixed)

Deleting mail in the "new mail" query generates notification

Reported by: nephele Owned by: axeld
Priority: normal Milestone: R1/beta5
Component: Servers/mail_daemon Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

to reproduce:

  • open the new mail querry from the mailbox icon
  • delete an email with selecting it and pressing delete
  • Withness a notification with "X new e-mails" popping up with X beeing the number of new mails before deleting

hrev56756

Change History (3)

comment:2 by diver, 2 years ago

Summary: Deleting mail in the "new mail" querry generates notificationDeleting mail in the "new mail" query generates notification

comment:3 by waddlesplash, 2 years ago

Milestone: UnscheduledR1/beta5
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.