mail: filter messages in Trash from unread count

When moving an unread message to the Trash, a B_QUERY_UPDATE is
triggered, resulting in a global notification popup of the new message
count - inclusive of all messages on the volume. The on-disk location of
a mail message is now checked to determine if it's in the Trash, before
incrementing or decrementing the unread mail count (and triggering a
notification). This effectively filters out notifications for deleting
unread e-mail messages.

The Deskbar view uses the same logic to display the Mail/No Mail icon.
The B_QUERY_UPDATE handler here has been adjusted to match.

Additionally, unread mail messages in the trash are now filtered when
mail_daemon starts. This ensures that an accurate initial unread count
is set.

Fixes #18252
Fixes #17510

Change-Id: I9b8ec0b2b1f1ddb07797f8a9bedf32811f26f137
Reviewed-on: https://review.haiku-os.org/c/haiku/+/6136
Reviewed-by: Jérôme Duval <jerome.duval@gmail.com>
Tested-by: Automation <automation@haiku-os.org>