src/servers/mail/MailDaemonApplication.cpp
@@ -20,6 +20,7 @@
 #include <FindDirectory.h>
 #include <fs_index.h>
 #include <IconUtils.h>
+#include <NodeInfo.h>
 #include <NodeMonitor.h>
 #include <Notification.h>
 #include <Path.h>
@@ -376,14 +377,26 @@ MailDaemonApplication::MessageReceived(BMessage* msg)
 		{
 			int32 previousCount = fNewMessages;
 
-			int32 opcode = msg->GetInt32("opcode", -1);
+			int32 opcode;
+			msg->FindInt32("opcode", &opcode);
+
 			switch (opcode) {
 				case B_ENTRY_CREATED:
-					fNewMessages++;
-					break;
 				case B_ENTRY_REMOVED:
-					fNewMessages--;
+				{
+					entry_ref ref;
+					msg->FindInt32("device", &ref.device);
+					msg->FindInt64("directory", &ref.directory);
+					BEntry entry(&ref);
+
+					if (!_IsEntryInTrash(entry)) {
+						if (opcode == B_ENTRY_CREATED)
+							fNewMessages++;
+						else
+							fNewMessages--;
+					}
 					break;
+				}
 				default:
 					return;
 			}
@@ -796,8 +809,10 @@ MailDaemonApplication::_InitNewMessagesCount()
 		query->Fetch();
 
 		BEntry entry;
-		while (query->GetNextEntry(&entry) == B_OK)
-			fNewMessages++;
+		while (query->GetNextEntry(&entry) == B_OK) {
+			if (!_IsEntryInTrash(entry))
+				fNewMessages++;
+		}
 
 		fQueries.AddItem(query);
 	}
